gccida/c3/for_each_insn_in_loop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4634:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4634:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4636:4: error: expected ';' after expression
rtx top; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4636:5: error: use of undeclared identifier 'top'
rtx top; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4637:4: error: expected ';' after expression
rtx v12; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4637:5: error: use of undeclared identifier 'v12'; did you mean 'v10'?
rtx v12; // r8 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4635:19: note: 'v10' declared here
unsigned __int16 *v10; // r15 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4646:4: error: expected ';' after expression
rtx end; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4646:5: error: use of undeclared identifier 'end'
rtx end; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4647:4: error: expected ';' after expression
rtx exit_labels; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4647:5: error: use of undeclared identifier 'exit_labels'; did you mean 'emit_label'?
rtx exit_labels; // rcx 
    ^~~~~~~~~~~
    emit_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/rtl.h:1340:12: note: 'emit_label' declared here
extern rtx emit_label                   PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4651:4: error: expected ';' after expression
rtx cont; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4651:5: error: use of undeclared identifier 'cont'
rtx cont; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4652:4: error: expected ';' after expression
rtx v27; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4652:5: error: use of undeclared identifier 'v27'
rtx v27; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4688:1: error: use of undeclared identifier 'v9'
v9 = fncall( loop, rtx, v8, v35); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4689:28: error: use of undeclared identifier 'v9'
v10 = ( unsigned __int16 *)v9; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4690:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 != 36 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4692:1: error: use of undeclared identifier 'top'
top = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/loop.c:4692:7: error: use of undeclared identifier 'v9'
top = v9[1].fld[0].rtx; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/for_each_insn_in_loop/src/obj/loop.o] Error 1
